--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-session": "^1.18.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.28.0",
+    "eslint": "^9.28.0",
+    "eslint-config-xo": "^0.47.0",
+    "globals": "^16.2.0"
   }
 }
